fix: tested on mobile, cleaned up additional styling

--- a/packages/fern-docs/ui/src/mdx/components/json/index.scss
+++ b/packages/fern-docs/ui/src/mdx/components/json/index.scss
@@ -7,3 +7,43 @@
     font-style: unset !important;
   }
 }
+
+.show-strings-on-one-line {
+  .variable-row {
+    display: flex;
+
+    > span {
+      display: flex;
+
+      > .object-key {
+        display: flex !important;
+      }
+    }
+
+    > .variable-value {
+      flex: 1;
+      min-width: 0; // Allows flex item to shrink below content size
+
+      > div {
+        width: 100%;
+
+        .string-value {
+          display: flex !important;
+          min-width: 0; // Allows flex item to shrink below content size
+
+          > span {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            min-width: 0; // Allows flex item to shrink below content size
+            flex: 1;
+
+            > span {
+              display: none !important;
+            }
+          }
+        }
+      }
+    }
+  }
+}
